@@ -626,6 +626,7 @@ Release 0.21.0 - Unreleased
    HBASE-2577  Remove 'core' maven module; move core up a level
    HBASE-2587  Coral where tests write data when running and make sure clean
                target removes all written
+   HBASE-2580  Make the hlog file names unique
 
   NEW FEATURES
    HBASE-1961  HBase EC2 scripts
